--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 APP_PORT = 5000
 SESS_SECRET = njcsncdjsncdjoscnoscndoscnods7y87979
 ACCESS_TOKEN_SECRET = cnsdicbduscdjlscsds
-URL_BACKEND = 'https://klinikasy-syifa.vercel.app/'
+URL_BACKEND = 'https://klinikasy-syifa.vercel.app'
